syntax = "proto3";

option go_package = "github.com/javibauza/final-project/grpc-service/pb";

package pb;

service UserService {
    rpc Authenticate (AuthRequest) returns (AuthResponse) {}
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
}

message Status {
    int32 code = 1;
    string message = 3;
}

message AuthRequest {
    string password = 1;
    string user_name = 3;
}
message AuthResponse {
    string user_id = 1;
    Status status = 3;
}

message CreateUserRequest {
    string user_name = 1;
    string password = 3;
    uint32 user_age = 5;
    string add_info = 7;
}
message CreateUserResponse {
    string user_id = 1;
    uint32 status_code = 3;
    Status status = 5;
}

message UpdateUserRequest {
    string user_id = 1;
    string user_name = 3;
    string password = 5;
    uint32 user_age = 7;
    string add_info = 9;
}
message UpdateUserResponse {
    Status status = 1;
}

message GetUserRequest {
    string user_id = 1;
}
message GetUserResponse {
    string user_id = 1;
    string user_name = 3;
    uint32 user_age = 5;
    string add_info = 7;
    Status status = 9;
}
